force-app/main/default/objects/Order_Item__c/fields/Adjusted_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Expiration_Date__c</fullName>
    <label>Adjusted Expiration Date</label>
    <type>Date</type>
</CustomField>