force-app/main/default/objects/Order_Item__c/fields/Agent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee__c</fullName>
    <label>Agent Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>