force-app/main/default/objects/Order_Item__c/fields/Agent_Fee_Amount_When_Pay__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee_Amount_When_Pay__c</fullName>
    <formula>if 
(
(TEXT(Agent_Fee_Currency__c)==TEXT(Billing_Currency__c))
, Agent_Fee__c 
, ((Agent_Fee__c/Agent_Fee_Unit_Rate_When_Pay__c)/Billing_Currency_Unit_Rate_When_Pay__c)
+ (((Agent_Fee__c/Agent_Fee_Unit_Rate_When_Pay__c)/Billing_Currency_Unit_Rate_When_Pay__c)*(CE_Markup_Percentage__c /100))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Fee Amount (When Pay)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>