force-app/main/default/objects/Order_Item__c/fields/Agent_Fee_Unit_Rate_When_Pay__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee_Unit_Rate_When_Pay__c</fullName>
    <label>Agent Fee Unit Rate (When Pay)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>