force-app/main/default/objects/Order_Item__c/fields/Agent_Status__c.field-meta.xml
<CustomField>
    <fullName>Agent_Status__c</fullName>
    <label>Agent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Agent Invoice</fullName>
            </value>
            <value>
                <fullName>Approve Agent Invoice</fullName>
            </value>
            <value>
                <fullName>Ready for Payment</fullName>
            </value>
            <value>
                <fullName>PTO/Agents Payments Completed</fullName>
            </value>
            <value>
                <fullName>Renewed by Agent</fullName>
            </value>
            <value>
                <fullName>Asset Renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>