force-app/main/default/objects/Order_Item__c/fields/Amount_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Calculated__c</fullName>
    <label>Amount Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>