force-app/main/default/objects/Order_Item__c/fields/Amount_Instructed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Instructed__c</fullName>
    <label>Amount Instructed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>