force-app/main/default/objects/Order_Item__c/fields/Application_No__c.field-meta.xml
<CustomField>
    <fullName>Application_No__c</fullName>
    <label>Application No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>