force-app/main/default/objects/Order_Item__c/fields/Asset_Index__c.field-meta.xml
<CustomField>
    <fullName>Asset_Index__c</fullName>
    <label>Asset Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>