force-app/main/default/objects/Order_Item__c/fields/Bank_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bank_Rate__c</fullName>
    <formula>Payment_Confirmation__r.Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>