force-app/main/default/objects/Order_Item__c/fields/Bill_API_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_API_Code__c</fullName>
    <label>Bill API Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>