force-app/main/default/objects/Order_Item__c/fields/Bill_API_Message__c.field-meta.xml
<CustomField>
    <fullName>Bill_API_Message__c</fullName>
    <label>Bill API Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>