force-app/main/default/objects/Order_Item__c/fields/Bill_Status__c.field-meta.xml
<CustomField>
    <fullName>Bill_Status__c</fullName>
    <label>Bill Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>NotCreated</fullName>
            </value>
            <value>
                <fullName>NotApplicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>