force-app/main/default/objects/Order_Item__c/fields/Billing_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency_Code__c</fullName>
    <label>Billing Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>