force-app/main/default/objects/Order_Item__c/fields/Billing_Currency_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency_Unit_Rate__c</fullName>
    <label>Billing Currency Unit Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>