force-app/main/default/objects/Order_Item__c/fields/Cancellation_Approval__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approval__c</fullName>
    <label>Cancellation Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>