force-app/main/default/objects/Order_Item__c/fields/Cancellation_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approved_Date__c</fullName>
    <label>Cancellation Approved Date</label>
    <type>Date</type>
</CustomField>