force-app/main/default/objects/Order_Item__c/fields/Cancellation_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Rejected_Date__c</fullName>
    <label>Cancellation Rejected Date</label>
    <type>Date</type>
</CustomField>