force-app/main/default/objects/Order_Item__c/fields/Cancellation_Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested_On__c</fullName>
    <label>Cancellation Requested Date</label>
    <type>Date</type>
</CustomField>