force-app/main/default/objects/Order_Item__c/fields/CE_Markup_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CE_Markup_Percentage__c</fullName>
    <label>CE Markup Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>