force-app/main/default/objects/Order_Item__c/fields/Claim_Fee__c.field-meta.xml
<CustomField>
    <fullName>Claim_Fee__c</fullName>
    <label>Claim Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>