force-app/main/default/objects/Order_Item__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Order__r.Client__r.Client_Name__c</formula>
    <label>Client</label>
    <type>Text</type>
</CustomField>