force-app/main/default/objects/Order_Item__c/fields/Client_Renewal_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Renewal_Id__c</fullName>
    <label>Client Renewal Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>