force-app/main/default/objects/Order_Item__c/fields/Comments_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_Cancellation__c</fullName>
    <label>Comments for Cancellation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>