force-app/main/default/objects/Order_Item__c/fields/CreditMemo_Comments__c.field-meta.xml
<CustomField>
    <fullName>CreditMemo_Comments__c</fullName>
    <label>CreditMemo Comments</label>
    <type>TextArea</type>
</CustomField>