force-app/main/default/objects/Order_Item__c/fields/Docket_No__c.field-meta.xml
<CustomField>
    <fullName>Docket_No__c</fullName>
    <label>Docket No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>