force-app/main/default/objects/Order_Item__c/fields/Drop_Dead_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_Date__c</fullName>
    <label>Drop Dead Date</label>
    <type>Date</type>
</CustomField>