force-app/main/default/objects/Order_Item__c/fields/Effective_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Filing_Date__c</fullName>
    <label>Effective Filing Date</label>
    <type>Date</type>
</CustomField>