force-app/main/default/objects/Order_Item__c/fields/Entity_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Name__c</fullName>
    <label>Entity Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>