force-app/main/default/objects/Order_Item__c/fields/Extension_Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Extension_Package_Version__c</fullName>
    <label>Extension Package Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>