force-app/main/default/objects/Order_Item__c/fields/Fee_Amount_When_Pay__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount_When_Pay__c</fullName>
    <formula>if 
(
(TEXT(Fee_Currency__c) == TEXT(Billing_Currency__c))
,(Fee__c +  Claim_Fee__c +  Surcharge__c)
,(((Fee__c +  Claim_Fee__c +  Surcharge__c)/Fee_Unit_Rate_When_Pay__c)/Billing_Currency_Unit_Rate_When_Pay__c)
+((((Fee__c +  Claim_Fee__c +  Surcharge__c)/Fee_Unit_Rate_When_Pay__c)/Billing_Currency_Unit_Rate_When_Pay__c) * (CE_Markup_Percentage__c /100))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTO Fee (Payable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>