force-app/main/default/objects/Order_Item__c/fields/Fee_Currency__c.field-meta.xml
<CustomField>
    <fullName>Fee_Currency__c</fullName>
    <label>Fee Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_All</valueSetName>
    </valueSet>
</CustomField>