force-app/main/default/objects/Order_Item__c/fields/Fee_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Currency_Code__c</fullName>
    <label>Fee Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>