force-app/main/default/objects/Order_Item__c/fields/Fee_Currency_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fee_Currency_Unit_Rate__c</fullName>
    <label>Fee Currency Unit Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>