force-app/main/default/objects/Order_Item__c/fields/Fee_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fee_Unit_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee Unit Rate (When Instruct)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>