force-app/main/default/objects/Order_Item__c/fields/Fee_Unit_Rate_When_Pay__c.field-meta.xml
<CustomField>
    <fullName>Fee_Unit_Rate_When_Pay__c</fullName>
    <label>Fee Unit Rate (When Pay)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>