force-app/main/default/objects/Order_Item__c/fields/Filing_Receipt_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Filing_Receipt_File_Id__c</fullName>
    <label>Filing Receipt File Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>