force-app/main/default/objects/Order_Item__c/fields/Filing_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Receipt_Status__c</fullName>
    <label>Filing Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Receipt</fullName>
            </value>
            <value>
                <fullName>Temporary Receipt Uploaded</fullName>
            </value>
            <value>
                <fullName>Receipt Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>