force-app/main/default/objects/Order_Item__c/fields/Filing_Receipt_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Filing_Receipt_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filing Receipt Uploaded</label>
    <type>Checkbox</type>
</CustomField>