force-app/main/default/objects/Order_Item__c/fields/Instructed_By__c.field-meta.xml
<CustomField>
    <fullName>Instructed_By__c</fullName>
    <label>Instructed By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>