force-app/main/default/objects/Order_Item__c/fields/Instructed_Date__c.field-meta.xml
<CustomField>
    <fullName>Instructed_Date__c</fullName>
    <label>Instructed Date</label>
    <type>Date</type>
</CustomField>