force-app/main/default/objects/Order_Item__c/fields/Instruction_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Date_From__c</fullName>
    <label>Instruction Date From</label>
    <type>Date</type>
</CustomField>