force-app/main/default/objects/Order_Item__c/fields/Instruction_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Date_To__c</fullName>
    <label>Instruction Date To</label>
    <type>Date</type>
</CustomField>