force-app/main/default/objects/Order_Item__c/fields/Instruction_Message__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Message__c</fullName>
    <label>Instruction Message</label>
    <type>TextArea</type>
</CustomField>