force-app/main/default/objects/Order_Item__c/fields/Invoice_Amount_When_Instruct__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_When_Instruct__c</fullName>
    <formula>Agent_Fee_Amount_When_Instruct__c +  Fee_Amount_When_Instruct__c +  Service_Fee_Amount_When_Instruct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount (When Instruct)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>