force-app/main/default/objects/Order_Item__c/fields/Invoice_Type_Name_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_Name_Value__c</fullName>
    <formula>if(
     TEXT(Order__r.Client__r.Invoice_Type__c) == &apos;Regular Invoice&apos;
     ,  Order__r.Client__r.Id + &apos;_&apos; +  Order__r.Id + &apos;_&apos; +  TEXT(Billing_Currency__c )
     , if ( 
          Path__c == null
          , Order__r.Client__r.Id + &apos;_&apos; +  Order__r.Id + &apos;_&apos; +  TEXT(Billing_Currency__c)
          , Order__r.Client__r.Id + &apos;_&apos; +  Order__r.Id + &apos;_&apos; +  Path__c  + &apos;_&apos; +  TEXT(Billing_Currency__c) 
     )
)</formula>
    <label>Invoice Type Name Value</label>
    <type>Text</type>
</CustomField>