force-app/main/default/objects/Order_Item__c/fields/Invoice_with_Variance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_with_Variance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice for Variance</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Assets (Invoice with Variance)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>