force-app/main/default/objects/Order_Item__c/fields/Is_Agent_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_fee_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent fee paid?</label>
    <type>Checkbox</type>
</CustomField>