force-app/main/default/objects/Order_Item__c/fields/Is_Instructed_After_Instruction_Window__c.field-meta.xml
<CustomField>
    <fullName>Is_Instructed_After_Instruction_Window__c</fullName>
    <formula>Due_Date__c &gt; Instruction_Date_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Instructed After Instruction Window</label>
    <type>Checkbox</type>
</CustomField>