force-app/main/default/objects/Order_Item__c/fields/Is_Instructed_during_Rush__c.field-meta.xml
<CustomField>
    <fullName>Is_Instructed_during_Rush__c</fullName>
    <formula>Due_Date__c - Instructed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Instructed during Rush</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>