force-app/main/default/objects/Order_Item__c/fields/IS_It_Renewed_Assets__c.field-meta.xml
<CustomField>
    <fullName>IS_It_Renewed_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewed Assets</label>
    <type>Checkbox</type>
</CustomField>