force-app/main/default/objects/Order_Item__c/fields/Is_it_renewed_in_PTO__c.field-meta.xml
<CustomField>
    <fullName>Is_it_renewed_in_PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it renewed in PTO?</label>
    <type>Checkbox</type>
</CustomField>