force-app/main/default/objects/Order_Item__c/fields/Is_Late_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Is_Late_Instruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Late Instruction</label>
    <type>Checkbox</type>
</CustomField>