force-app/main/default/objects/Order_Item__c/fields/Is_PTO_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_PTO_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PTO fee paid?</label>
    <type>Checkbox</type>
</CustomField>