force-app/main/default/objects/Order_Item__c/fields/Is_Renewed_Externally__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewed_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewed Externally?</label>
    <type>Checkbox</type>
</CustomField>