force-app/main/default/objects/Order_Item__c/fields/Is_send_to_Validate_with_PTO__c.field-meta.xml
<CustomField>
    <fullName>Is_send_to_Validate_with_PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is send to Validate with PTO</label>
    <type>Checkbox</type>
</CustomField>