force-app/main/default/objects/Order_Item__c/fields/Is_Surcharge_Period__c.field-meta.xml
<CustomField>
    <fullName>Is_Surcharge_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Surcharge Period</label>
    <type>Checkbox</type>
</CustomField>