force-app/main/default/objects/Order_Item__c/fields/Jurisdiction_Code__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_Code__c</fullName>
    <label>Jurisdiction Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>