force-app/main/default/objects/Order_Item__c/fields/Late_Instruction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Instruction_Fee__c</fullName>
    <label>Late Instruction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>