force-app/main/default/objects/Order_Item__c/fields/Late_Instruction_Fee_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Late_Instruction_Fee_Currency_Code__c</fullName>
    <label>Late Instruction Fee Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>