force-app/main/default/objects/Order_Item__c/fields/Late_Instruction_Fee_Currency_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Late_Instruction_Fee_Currency_Unit_Rate__c</fullName>
    <label>Late Instruction Fee Currency Unit Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>