force-app/main/default/objects/Order_Item__c/fields/MV_API_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>MV_API_Ref_Id__c</fullName>
    <label>MV API Ref Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>