force-app/main/default/objects/Order_Item__c/fields/MV_Invoice_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>MV_Invoice_Creation_Status__c</fullName>
    <label>MV Invoice Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>