force-app/main/default/objects/Order_Item__c/fields/Paid_On__c.field-meta.xml
<CustomField>
    <fullName>Paid_On__c</fullName>
    <label>PTO Payment Date</label>
    <type>Date</type>
</CustomField>