force-app/main/default/objects/Order_Item__c/fields/Patent_Status__c.field-meta.xml
<CustomField>
    <fullName>Patent_Status__c</fullName>
    <label>Patent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Patent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>