force-app/main/default/objects/Order_Item__c/fields/Patent_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Patent_Sub_Status__c</fullName>
    <description>Examination Status for JP, etc...</description>
    <label>Patent Sub Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>