force-app/main/default/objects/Order_Item__c/fields/Patent_Type__c.field-meta.xml
<CustomField>
    <fullName>Patent_Type__c</fullName>
    <label>Patent Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>