force-app/main/default/objects/Order_Item__c/fields/Payment_API_Message__c.field-meta.xml
<CustomField>
    <fullName>Payment_API_Message__c</fullName>
    <label>Payment API Message</label>
    <type>TextArea</type>
</CustomField>