force-app/main/default/objects/Order_Item__c/fields/Payment_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Approval_Status__c</fullName>
    <label>Payment Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested to Approve</fullName>
                <label>Awaiting Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
                <isActive>false</isActive>
                <label>Approve</label>
            </value>
            <value>
                <fullName>Decline</fullName>
                <isActive>false</isActive>
                <label>Decline</label>
            </value>
            <value>
                <fullName>Request to Approve</fullName>
                <isActive>false</isActive>
                <label>Request to Approve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>