force-app/main/default/objects/Order_Item__c/fields/Payment_Approve_Requested_From__c.field-meta.xml
<CustomField>
    <fullName>Payment_Approve_Requested_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Approve Requested From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>