force-app/main/default/objects/Order_Item__c/fields/Payment_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Confirmation</label>
    <referenceTo>Payment_Confirmation__c</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>