force-app/main/default/objects/Order_Item__c/fields/Payment_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmation_Status__c</fullName>
    <formula>TEXT(Payment_Confirmation__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Confirmation Status</label>
    <type>Text</type>
</CustomField>