force-app/main/default/objects/Order_Item__c/fields/Payment_Received_from_Client__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_from_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Received from Client</label>
    <type>Checkbox</type>
</CustomField>